[package]
name = "easylooper"
version = "0.1.0"
authors = ["Jens-Christian Fischer <jens-christian.fischer@switch.ch>"]

[dependencies]
vst = { git = 'https://github.com/rust-dsp/rust-vst' }
easyvst = { git = 'https://github.com/Boscop/easyvst' }
rand = "0.3"
time = "0.1.40"
log = "*"
log-panics = "*"
simplelog = "*"
num-traits = "*"
asprim = "*"
tinyui = { git = 'https://github.com/jcfischer/tinyui-rs.git' }



[dev-dependencies]


[lib]
name = "easylooper"
crate-type = ["cdylib"]
